DRW: Crash opening Mr Elephant scene since recent commit #64366

Closed
opened 2019-05-09 10:44:04 +02:00 by Ulysse Martin · 10 comments

System Information
Operating system: Win 10 64
Graphics card: GTX 1080

Blender Version
Broken: 0030e4da70
Worked: 05b0f52aa7 (previous commit)

Short description of error
Crash when we open Mr Elephant scene downloaded from https://www.blender.org/2-8/

Exact steps for others to reproduce the error
open the .blend

I did a git bisect and the commit which seems to cause an issue is 0030e4da70 (https://developer.blender.org/rB0030e4da7073d62561cca508330ab150b37ee6eb)

I'm on windows, i don't know if you can reproduce the bug @fclem ?

**System Information** Operating system: Win 10 64 Graphics card: GTX 1080 **Blender Version** Broken: 0030e4da7073d62561cca508330ab150b37ee6eb Worked: 05b0f52aa78344a4a74b816fd1d025aa344ec28c (previous commit) **Short description of error** Crash when we open Mr Elephant scene downloaded from https://www.blender.org/2-8/ **Exact steps for others to reproduce the error** open the .blend I did a git bisect and the commit which seems to cause an issue is 0030e4da7073d62561cca508330ab150b37ee6eb (https://developer.blender.org/rB0030e4da7073d62561cca508330ab150b37ee6eb) I'm on windows, i don't know if you can reproduce the bug @fclem ?
Author

Added subscribers: @fclem, @you.le

Added subscribers: @fclem, @you.le

#64367 was marked as duplicate of this issue

#64367 was marked as duplicate of this issue

#64369 was marked as duplicate of this issue

#64369 was marked as duplicate of this issue
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Clément Foucault was assigned by Jeroen Bakker 2019-05-09 11:12:15 +02:00
Member

@fclem Simple reproduceable case is:

  • add curve
  • set extrude in geometry
  • add modifier.

This will make the cache of the eval_mesh NULL what fails in the drawmanager cache...

@fclem Simple reproduceable case is: * add curve * set extrude in geometry * add modifier. This will make the cache of the eval_mesh NULL what fails in the drawmanager cache...

This issue was referenced by c74e9273a9

This issue was referenced by c74e9273a9884128c929029f49210f81ee1d328a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you

Thank you

Added subscriber: @andreymd87

Added subscriber: @andreymd87

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64366
No description provided.