Fix T64366 DRW: Crash opening Mr Elephant scene since recent commit